# ballard-grappling-club-web-app

./: .gitignore  docker-compose.yml  pyproject.toml  test.json
alembic/: env.py
backend/: alembic.ini  env.py  main.py
backend/alembic/: env.py
backend/alembic/versions/: 0d6a01a7ebd6_system_sync.py  11c062f7ff4c_system_sync.py  13c9e28963f7_system_sync.py  206ccd6fd444_system_sync.py  69462cac7812_system_sync.py  8f29fad29cf3_system_sync.py  90e796b8215a_system_sync.py  9bf2dbcbafaf_system_sync.py  ae8e316fa1da_system_sync.py  d697c9245f91_system_sync.py  ff6fdf392090_system_sync.py
backend/app/: app.py
backend/app/db/: database.py  models.py
backend/app/router/: auth.py  class_attendance.py  classes.py  products.py  stripe.py  stripe_webhooks.py  students.py  subscriptions.py  transactions.py
backend/app/services/: class_services.py  email_services.py  get_google_token.py  password_reset.py  stripe_services.py
backend/app/utils/: helpers.py  security.py  stripe_services.py
frontend/: app.py  env.py
frontend/routes/api/: class_.py  dashboard.py  register.py  reset_password.py  stripe.py
frontend/static/css/: about.css  animate-title.css  banner.css  base.css  class_students.css  dashboard.css  (+7 more)
frontend/templates/: about.html  banner.html  base.html  checkout-cancel.html  checkout-success.html  class_checkin.html  class_students.html  comingsoon.html  dashboard.html  faq.html  forgot_password.html  home.html  price.html  qr.html  register.html  reset_password.html  schedule.html  signin.html  signin_old.html
frontend/utils/: helpers.py  qr_codes.py
(+23 files in other folders)
