[project]
name = "ballard-grappling-club"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "boto>=2.49.0",
    "boto3>=1.43.8",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.4",
    "gunicorn>=26.0.0",
    "mangum>=0.21.0",
    "passlib[argon,argon2,bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "python-dateutil>=2.9.0.post0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.28",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
    "stripe>=15.1.0",
    "uvicorn>=0.46.0",
]
